--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: GUI mode",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": [
+                "-m",
+                "gui_samples"
+            ]
+        },
+        {
             "name": "Python: Sample Mode",
             "type": "python",
             "request": "launch",
@@ -11,7 +22,7 @@
                 "-m",
                 "sample_mode",
                 "-l",
-                "30",
+                "10",
                 "-i",
                 "1000"
             ]
