--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,58 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Python: convert_raw",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "args": [
+        "-l",
+        "--srcdir=raw_data",
+        "--dstdir=samples"
+      ]
+    },
+    {
+      "name": "Python: index_gen-generate tag index",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "args": [
+        "-i"
+      ]
+    },
+    {
+      "name": "Python: index_gen-generate list with sample interval=2000",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "args": [
+        "-v",
+        "2000"
+      ]
+    },
+    {
+      "name": "Python: index_gen-generate list all",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "args": [
+        "-a"
+      ]
+    },
+    {
       "name": "Python: GUI mode",
       "type": "python",
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "args": ["-m", "gui_samples"]
+      "args": [
+        "-m",
+        "gui_samples"
+      ]
     },
     {
       "name": "Python: Sample Mode",
@@ -15,7 +61,14 @@
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "args": ["-m", "sample_mode", "-l", "10", "-i", "1000"]
+      "args": [
+        "-m",
+        "sample_mode",
+        "-l",
+        "10",
+        "-i",
+        "1000"
+      ]
     }
   ]
 }
