modify correction algorithm

--- a/Config.ini
+++ b/Config.ini
@@ -33,7 +33,7 @@ COMP2IP = 192.168.31.228
 BP1 = -0.0001
 BP2 = -0.0003
 BP3 = -0.0025
-DistCorrUsing = GLOBAL
+DistCorrUsing = DEDICATE
 GlobalDistCorr = 0.0
 GlobalRotateCorr = 0.0
 GlobalHorizonYawCorr = 0.0
