world_s formula bugs fixed

--- a/Config.ini
+++ b/Config.ini
@@ -16,14 +16,14 @@ Camera8 = 00802890310
 
 [CameraDegree]
 Camera0 = 0
-Camera1 = 36.585
-Camera2 = 77.710
-Camera3 = 118.560
-Camera4 = 159.663
-Camera5 = 200.660
-Camera6 = 241.703
-Camera7 = 282.317
-Camera8 = 323.415
+Camera1 = 40.0000
+Camera2 = 80.7583
+Camera3 = 121.7667
+Camera4 = 162.9417
+Camera5 = 203.9500
+Camera6 = 244.7583
+Camera7 = 286.0667
+Camera8 = 327.3583
 
 [ParamDetail]
 AppDir = C:\Users\voies_ui\Desktop\SocketServer.exe
@@ -33,6 +33,9 @@ COMP2IP = 192.168.31.228
 BP1 = 0
 BP2 = 0
 BP3 = 0
+SinCorrA = 1.164
+SincorrT = 90.96
+SinCorrUsing = TRUE
 DistCorrUsing = DEDICATE
 GlobalDistCorr = 0.0
 GlobalRotateCorr = 0.0
@@ -41,178 +44,178 @@ GlobalHorizonYawCorr = 0.0
 
 
 [CameraParam]
-Camera1Uo = 1324.485
-Camera1Vo = 1030.539
-Camera1Fx = 2475.147
-Camera1Fy = 2470.124
-Camera1Bmm = 410.8400027066
-Camera1Phi = 1.2248326934
-Camera1M = 234.1663200885
-Camera1P00 = 1.0758508598
-Camera1P10 = -0.0001794150
-Camera1P01 = -0.0688650370
-Camera1P20 = 0.0000001065
-Camera1P11 = 0.0000645689
-Camera1P02 = -0.4662589724
-Camera1K00 = -0.0323735710
-Camera1K10 = 0.9211704788
-Camera1K01 = 0.0000790797
-Camera1K11 = -0.0000065783
-Camera1K02 = -0.0000000480
+Camera1Uo = 1307.53
+Camera1Vo = 1031.07
+Camera1Fx = 2505.13
+Camera1Fy = 2498.92
+Camera1Bmm = 403.3877160387
+Camera1Phi = 1.2356033533
+Camera1M = 236.1897122855
+Camera1P00 = 1.0395375729
+Camera1P10 = -0.0000931461
+Camera1P01 = -0.0057929591
+Camera1P20 = 0.0000000549
+Camera1P11 = 0.0000063933
+Camera1P02 = -0.4787773713
+Camera1K00 = 0.0697655043
+Camera1K10 = 0.9725618665
+Camera1K01 = -0.0001531216
+Camera1K11 = -0.0000531337
+Camera1K02 = 0.0000000826
 Camera1Dcor = 0.0
-Camera1Dcorb = -7.6584
-Camera1Dcork = -0.0022
+Camera1Dcorb = 0
+Camera1Dcork = 0
 
-Camera2Uo = 1308.646
-Camera2Vo = 1016.834
-Camera2Fx = 2486.324
-Camera2Fy = 2479.832
-Camera2Bmm = 423.7220562083
-Camera2Phi = 1.2251738135
-Camera2M = 184.2767248589
-Camera2P00 = 1.0221161143
-Camera2P10 = -0.0000542122
-Camera2P01 = 0.0449703993
-Camera2P20 = 0.0000000324
-Camera2P11 = -0.0000346564
-Camera2P02 = -0.4648496994
-Camera2K00 = -0.0352416616
-Camera2K10 = 0.9405758091
-Camera2K01 = 0.0000866552
-Camera2K11 = -0.0000264771
-Camera2K02 = -0.0000000526
+Camera2Uo = 1290.83
+Camera2Vo = 1019.44
+Camera2Fx = 2505.96
+Camera2Fy = 2497.70
+Camera2Bmm = 426.8224681267
+Camera2Phi = 1.2300316920
+Camera2M = 173.4885057245
+Camera2P00 = 1.0018755455
+Camera2P10 = -0.0000117016
+Camera2P01 = 0.0238003722
+Camera2P20 = 0.0000000104
+Camera2P11 = -0.0000094028
+Camera2P02 = -0.4565443704
+Camera2K00 = -0.0912548991
+Camera2K10 = 1.0134758827
+Camera2K01 = 0.0002128719
+Camera2K11 = -0.0000692367
+Camera2K02 = -0.0000001245
 Camera2Dcor = 0.0
-Camera2Dcorb = 3.1817
-Camera2Dcork = -0.0052
+Camera2Dcorb = 0
+Camera2Dcork = 0
 
-Camera3Uo = 1311.030
-Camera3Vo = 1028.453
-Camera3Fx = 2486.984
-Camera3Fy = 2481.863
-Camera3Bmm = 408.5036958349
-Camera3Phi = 1.2301357011
-Camera3M = 234.2177615044
-Camera3P00 = 1.1191116086
-Camera3P10 = -0.0002864579
-Camera3P01 = 0.0990428764
-Camera3P20 = 0.0000001716
-Camera3P11 = -0.0000752902
-Camera3P02 = -0.4783978810
-Camera3K00 = 0.0016718692
-Camera3K10 = 0.9378211339
-Camera3K01 = -0.0000037228
-Camera3K11 = -0.0000206075
-Camera3K02 = 0.0000000018
+Camera3Uo = 1298.71
+Camera3Vo = 1022.38
+Camera3Fx = 2498.59
+Camera3Fy = 2497.25
+Camera3Bmm = 391.0413114047
+Camera3Phi = 1.2375171113
+Camera3M = 283.0619326909
+Camera3P00 = 1.1424783209
+Camera3P10 = -0.0003354538
+Camera3P01 = 0.0638741376
+Camera3P20 = 0.0000001968
+Camera3P11 = -0.0000502791
+Camera3P02 = -0.4667393631
+Camera3K00 = -0.0398041167
+Camera3K10 = 0.9625855264
+Camera3K01 = 0.0000958168
+Camera3K11 = -0.0000556921
+Camera3K02 = -0.0000000588
 Camera3Dcor = 0.0
-Camera3Dcorb = -3.0789
-Camera3Dcork = -0.0023
+Camera3Dcorb = 0
+Camera3Dcork = 0
 
-Camera4Uo = 1314.656
-Camera4Vo = 1024.564
-Camera4Fx = 2479.137
-Camera4Fy = 2472.405
-Camera4Bmm = 451.4894484544
-Camera4Phi = 1.2187531327
-Camera4M = 100.0049698938
-Camera4P00 = 0.9310823761
-Camera4P10 = 0.0001710028
-Camera4P01 = 0.3090692871
-Camera4P20 = -0.0000001064
-Camera4P11 = -0.0002313552
-Camera4P02 = -0.4782792882
-Camera4K00 = -0.0578801522
-Camera4K10 = 0.8889646657
-Camera4K01 = 0.0001480211
-Camera4K11 = 0.0000312630
-Camera4K02 = -0.0000000944
+Camera4Uo = 1300.63
+Camera4Vo = 1015.26
+Camera4Fx = 2486.57
+Camera4Fy = 2492.50
+Camera4Bmm = 409.9609189574
+Camera4Phi = 1.2314591423
+Camera4M = 236.1500258220
+Camera4P00 = 1.0522213733
+Camera4P10 = -0.0001286373
+Camera4P01 = 0.2681967204
+Camera4P20 = 0.0000000788
+Camera4P11 = -0.0002037815
+Camera4P02 = -0.4691419963
+Camera4K00 = 0.0738123976
+Camera4K10 = 0.9364988504
+Camera4K01 = -0.0001790751
+Camera4K11 = -0.0000467175
+Camera4K02 = 0.0000001083
 Camera4Dcor = 0.0
-Camera4Dcorb = -1.6085
-Camera4Dcork = -0.0019
+Camera4Dcorb = 0
+Camera4Dcork = 0
 
-Camera5Uo = 1327.569
-Camera5Vo = 1033.007
-Camera5Fx = 2485.787
-Camera5Fy = 2479.421
-Camera5Bmm = 393.8404789834
-Camera5Phi = 1.2253301200
-Camera5M = 280.9730506655
-Camera5P00 = 1.0515913161
-Camera5P10 = -0.0001276083
-Camera5P01 = 0.1200854570
-Camera5P20 = 0.0000000786
-Camera5P11 = -0.0000974345
-Camera5P02 = -0.4675826569
-Camera5K00 = -0.0049682236
-Camera5K10 = 0.9474714128
-Camera5K01 = 0.0000133036
-Camera5K11 = -0.0000370637
-Camera5K02 = -0.0000000091
+Camera5Uo = 1312.78
+Camera5Vo = 1023.54
+Camera5Fx = 2487.81
+Camera5Fy = 2493.37
+Camera5Bmm = 422.1515757880
+Camera5Phi = 1.2270984504
+Camera5M = 193.7467065389
+Camera5P00 = 1.0515948853
+Camera5P10 = -0.0001192338
+Camera5P01 = 0.0599020340
+Camera5P20 = 0.0000000689
+Camera5P11 = -0.0000464201
+Camera5P02 = -0.4605180690
+Camera5K00 = 0.0092700775
+Camera5K10 = 1.0014990359
+Camera5K01 = -0.0000261495
+Camera5K11 = -0.0000806601
+Camera5K02 = 0.0000000186
 Camera5Dcor = 0.0
-Camera5Dcorb = -6.1806
-Camera5Dcork = -0.0003
+Camera5Dcorb = 0
+Camera5Dcork = 0
 
-Camera6Uo = 1290.631
-Camera6Vo = 1019.358
-Camera6Fx = 2479.756
-Camera6Fy = 2473.240
-Camera6Bmm = 430.0248401670
-Camera6Phi = 1.2097806951
-Camera6M = 168.7216713186
-Camera6P00 = 1.0088765408
-Camera6P10 = -0.0000292024
-Camera6P01 = 0.1656014004
-Camera6P20 = 0.0000000220
-Camera6P11 = -0.0001330602
-Camera6P02 = -0.4594110661
-Camera6K00 = -0.0277158916
-Camera6K10 = 0.9254808505
-Camera6K01 = 0.0000749576
-Camera6K11 = -0.0000153361
-Camera6K02 = -0.0000000499
+Camera6Uo = 1296.61
+Camera6Vo = 1018.12
+Camera6Fx = 2484.56
+Camera6Fy = 2479.53
+Camera6Bmm = 406.8730506004
+Camera6Phi = 1.2151339618
+Camera6M = 236.4680001199
+Camera6P00 = 1.0234689157
+Camera6P10 = -0.0000628914
+Camera6P01 = 0.1472389311
+Camera6P20 = 0.0000000416
+Camera6P11 = -0.0001147644
+Camera6P02 = -0.4609886360
+Camera6K00 = -0.1494629703
+Camera6K10 = 0.9940911376
+Camera6K01 = 0.0003690992
+Camera6K11 = -0.0000923762
+Camera6K02 = -0.0000002283
 Camera6Dcor = 0.0
-Camera6Dcorb = 7.5738
-Camera6Dcork = -0.0048
+Camera6Dcorb = 0
+Camera6Dcork = 0
 
-Camera7Uo = 1323.532
-Camera7Vo = 1043.863
-Camera7Fx = 2473.445
-Camera7Fy = 2467.786
-Camera7Bmm = 444.0410803759
-Camera7Phi = 1.2065934418
-Camera7M = 130.8303402605
-Camera7P00 = 0.9899438464
-Camera7P10 = 0.0000256746
-Camera7P01 = 0.0217824883
-Camera7P20 = -0.0000000166
-Camera7P11 = -0.0000078011
-Camera7P02 = -0.4548499989
-Camera7K00 = 0.0615339969
-Camera7K10 = 0.9302410402
-Camera7K01 = -0.0001481015
-Camera7K11 = -0.0000214400
-Camera7K02 = 0.0000000892
+Camera7Uo = 1317.56
+Camera7Vo = 1030.65
+Camera7Fx = 2480.83
+Camera7Fy = 2485.99
+Camera7Bmm = 420.2871204776
+Camera7Phi = 1.2152129313
+Camera7M = 195.2148587389
+Camera7P00 = 0.9663780956
+Camera7P10 = 0.0000764215
+Camera7P01 = -0.1250344312
+Camera7P20 = -0.0000000432
+Camera7P11 = 0.0000970984
+Camera7P02 = -0.4449643236
+Camera7K00 = 0.2138832980
+Camera7K10 = 0.9540487411
+Camera7K01 = -0.0005228706
+Camera7K11 = -0.0000334589
+Camera7K02 = 0.0000003193
 Camera7Dcor = 0.0
-Camera7Dcorb = -5.7148
-Camera7Dcork = -0.0006
+Camera7Dcorb = 0
+Camera7Dcork = 0
 
 Camera8Uo = 1303.35
 Camera8Vo = 1013.28
 Camera8Fx = 2476.72
 Camera8Fy = 2471.26
-Camera8Bmm = 395.8043522169
-Camera8Phi = 1.2195438767
-Camera8M = 275.4163774059
-Camera8P00 = 1.1125220154
-Camera8P10 = -0.0002788919
-Camera8P01 = 0.0191502216
-Camera8P20 = 0.0000001722
-Camera8P11 = -0.0000121139
-Camera8P02 = -0.4586342542
-Camera8K00 = 0.0498471393
-Camera8K10 = 0.9638885129
-Camera8K01 = -0.0001176813
-Camera8K11 = -0.0000563180
-Camera8K02 = 0.0000000680
+Camera8Bmm = 429.2320015197
+Camera8Phi = 1.2279769196
+Camera8M = 172.2584738485
+Camera8P00 = 1.0386309963
+Camera8P10 = -0.0000921282
+Camera8P01 = 0.0579536836
+Camera8P20 = 0.0000000549
+Camera8P11 = -0.0000473239
+Camera8P02 = -0.4816095384
+Camera8K00 = 0.0185753744
+Camera8K10 = 0.9767615152
+Camera8K01 = -0.0000490486
+Camera8K11 = -0.0000541220
+Camera8K02 = 0.0000000322
 Camera8Dcor = 0.0
 Camera8Dcorb = 0
 Camera8Dcork = 0
